--- a/public/html_files/remove_magic_strings.html
+++ b/public/html_files/remove_magic_strings.html
@@ -20,7 +20,7 @@ function processMathHTML() {
 
 <h3>Description</h3>
 
-<p>Reads in a .<code>docx</code> file and returns a new version with magic strings removed from the document.
+<p>Reads in a <code>.docx</code> file and returns a new version with magic strings removed from the document.
 </p>
 
 
