--- a/public/html_files/reportifyr.html
+++ b/public/html_files/reportifyr.html
@@ -156,7 +156,13 @@ strings and bookmarks from document.
 <li> <p><code>make_doc_dirs</code>: FILL IN
 </p>
 </li>
+<li> <p><code>fit_flextable_to_page</code>: FILL IN
+</p>
+</li>
 <li> <p><code>validate_object</code>: FILL IN
+</p>
+</li>
+<li> <p><code>validate_config</code>: FILL IN
 </p>
 </li></ul>
 
