--- a/public/html_files/toggle_logger.html
+++ b/public/html_files/toggle_logger.html
@@ -26,8 +26,18 @@ function processMathHTML() {
 
 <h3>Usage</h3>
 
-<pre><code class='language-R'>toggle_logger()
+<pre><code class='language-R'>toggle_logger(quiet = FALSE)
 </code></pre>
+
+
+<h3>Arguments</h3>
+
+<table>
+<tr><td><code id="quiet">quiet</code></td>
+<td>
+<p>suppresses messaging about log level.</p>
+</td></tr>
+</table>
 
 
 <h3>Examples</h3>
