--- a/public/html_files/get_venv_uv_paths.html
+++ b/public/html_files/get_venv_uv_paths.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>R: Initializes python virtual environment</title>
+<!DOCTYPE html><html><head><title>R: get_venv_uv_paths</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.3/dist/katex.min.css">
@@ -14,43 +14,32 @@ function processMathHTML() {
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body><div class="container"><main>
 
-<table style="width: 100%;"><tr><td>initialize_python</td><td style="text-align: right;">R Documentation</td></tr></table>
+<table style="width: 100%;"><tr><td>get_venv_uv_paths</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Initializes python virtual environment</h2>
+<h2>get_venv_uv_paths</h2>
 
 <h3>Description</h3>
 
-<p>Initializes python virtual environment
+<p>get_venv_uv_paths
 </p>
 
 
 <h3>Usage</h3>
 
-<pre><code class='language-R'>initialize_python(continue = NULL)
+<pre><code class='language-R'>get_venv_uv_paths()
 </code></pre>
-
-
-<h3>Arguments</h3>
-
-<table>
-<tr><td><code id="continue">continue</code></td>
-<td>
-<p>Optional argument to bypass asking user for
-confirmation to install python deps</p>
-</td></tr>
-</table>
 
 
 <h3>Value</h3>
 
-<p>invisibly the metadata_file path
+<p>list of paths to uv and venv directory for calling py scripts
 </p>
 
 
 <h3>Examples</h3>
 
 <pre><code class='language-R'>## Not run: 
-initialize_python()
+get_venv_uv_paths()
 
 ## End(Not run)
 </code></pre>
