--- a/public/html_files/sync_report_project.html
+++ b/public/html_files/sync_report_project.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>R: Create report directories within a project</title>
+<!DOCTYPE html><html><head><title>R: Synchronizes report project with config and python...</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.3/dist/katex.min.css">
@@ -14,23 +14,23 @@ function processMathHTML() {
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body><div class="container"><main>
 
-<table style="width: 100%;"><tr><td>initialize_report_project</td><td style="text-align: right;">R Documentation</td></tr></table>
+<table style="width: 100%;"><tr><td>sync_report_project</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Create report directories within a project</h2>
+<h2>Synchronizes report project with config and python
+dependencies set through options. Uses .report_dir_name_init.json
+to track differences.</h2>
 
 <h3>Description</h3>
 
-<p>Create report directories within a project
+<p>Synchronizes report project with config and python
+dependencies set through options. Uses .report_dir_name_init.json
+to track differences.
 </p>
 
 
 <h3>Usage</h3>
 
-<pre><code class='language-R'>initialize_report_project(
-  project_dir,
-  report_dir_name = NULL,
-  outputs_dir_name = NULL
-)
+<pre><code class='language-R'>sync_report_project(project_dir, report_dir_name = NULL)
 </code></pre>
 
 
@@ -48,18 +48,13 @@ The directory must already exist; otherwise, an error will be thrown.</p>
 <p>The directory name for where reports will be saved.
 Default is <code>NULL</code>. If <code>NULL</code>, <code>report</code> will be used.</p>
 </td></tr>
-<tr><td><code id="outputs_dir_name">outputs_dir_name</code></td>
-<td>
-<p>The directory name for where artifacts will be saved.
-Default is <code>NULL</code>. If <code>NULL</code>, <code>OUTPUTS</code> will be used.</p>
-</td></tr>
 </table>
 
 
 <h3>Examples</h3>
 
 <pre><code class='language-R'>## Not run: 
-initialize_report_project(project_dir = tempdir())
+sync_report_project(here::here())
 
 ## End(Not run)
 </code></pre>
