--- a/public/html_files/validate_input_args.html
+++ b/public/html_files/validate_input_args.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>R: Initializes python virtual environment</title>
+<!DOCTYPE html><html><head><title>R: Validates input and output arguments for reportifyr functions</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.3/dist/katex.min.css">
@@ -14,43 +14,49 @@ function processMathHTML() {
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body><div class="container"><main>
 
-<table style="width: 100%;"><tr><td>initialize_python</td><td style="text-align: right;">R Documentation</td></tr></table>
+<table style="width: 100%;"><tr><td>validate_input_args</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Initializes python virtual environment</h2>
+<h2>Validates input and output arguments for reportifyr functions</h2>
 
 <h3>Description</h3>
 
-<p>Initializes python virtual environment
+<p>Validates input and output arguments for reportifyr functions
 </p>
 
 
 <h3>Usage</h3>
 
-<pre><code class='language-R'>initialize_python(continue = NULL)
+<pre><code class='language-R'>validate_input_args(docx_in, docx_out)
 </code></pre>
 
 
 <h3>Arguments</h3>
 
 <table>
-<tr><td><code id="continue">continue</code></td>
+<tr><td><code id="docx_in">docx_in</code></td>
 <td>
-<p>Optional argument to bypass asking user for
-confirmation to install python deps</p>
+<p>The file path to the input <code>.docx</code> file.</p>
+</td></tr>
+<tr><td><code id="docx_out">docx_out</code></td>
+<td>
+<p>The file path to the output <code>.docx</code> file to save to.</p>
 </td></tr>
 </table>
 
 
 <h3>Value</h3>
 
-<p>invisibly the metadata_file path
+<p>()
 </p>
 
 
 <h3>Examples</h3>
 
 <pre><code class='language-R'>## Not run: 
-initialize_python()
+validate_input_args(
+  "template.docx",
+  "template-figs.docx"
+)
 
 ## End(Not run)
 </code></pre>
