Revert "Migrating 0.3.1 content"
This reverts commit 18895ebaba482e168b1c55ad6204fe58b60e2719.

--- a/public/html_files/add_tables.html
+++ b/public/html_files/add_tables.html
@@ -26,7 +26,7 @@ function processMathHTML() {
 
 <h3>Usage</h3>
 
-<pre><code class='language-R'>add_tables(docx_in, docx_out, tables_path, config_yaml = NULL, debug = FALSE)
+<pre><code class='language-R'>add_tables(docx_in, docx_out, tables_path, debug = FALSE)
 </code></pre>
 
 
@@ -44,10 +44,6 @@ function processMathHTML() {
 <tr><td><code id="tables_path">tables_path</code></td>
 <td>
 <p>The file path to the tables and associated metadata directory.</p>
-</td></tr>
-<tr><td><code id="config_yaml">config_yaml</code></td>
-<td>
-<p>The file path to the <code>config.yaml</code>. Default is <code>NULL</code>, a default <code>config.yaml</code> bundled with the <code>reportifyr</code> package is used.</p>
 </td></tr>
 <tr><td><code id="debug">debug</code></td>
 <td>
