--- a/public/html_files/initialize_python.html
+++ b/public/html_files/initialize_python.html
@@ -26,25 +26,8 @@ function processMathHTML() {
 
 <h3>Usage</h3>
 
-<pre><code class='language-R'>initialize_python(continue = NULL)
+<pre><code class='language-R'>initialize_python()
 </code></pre>
-
-
-<h3>Arguments</h3>
-
-<table>
-<tr><td><code id="continue">continue</code></td>
-<td>
-<p>Optional argument to bypass asking user for
-confirmation to install python deps</p>
-</td></tr>
-</table>
-
-
-<h3>Value</h3>
-
-<p>invisibly the metadata_file path
-</p>
 
 
 <h3>Examples</h3>
