--- a/public/html_files/initialize_report_project.html
+++ b/public/html_files/initialize_report_project.html
@@ -26,11 +26,7 @@ function processMathHTML() {
 
 <h3>Usage</h3>
 
-<pre><code class='language-R'>initialize_report_project(
-  project_dir,
-  report_dir_name = NULL,
-  outputs_dir_name = NULL
-)
+<pre><code class='language-R'>initialize_report_project(project_dir)
 </code></pre>
 
 
@@ -39,19 +35,7 @@ function processMathHTML() {
 <table>
 <tr><td><code id="project_dir">project_dir</code></td>
 <td>
-<p>The file path to the main project directory
-where the directory structure will be created.
-The directory must already exist; otherwise, an error will be thrown.</p>
-</td></tr>
-<tr><td><code id="report_dir_name">report_dir_name</code></td>
-<td>
-<p>The directory name for where reports will be saved.
-Default is <code>NULL</code>. If <code>NULL</code>, <code>report</code> will be used.</p>
-</td></tr>
-<tr><td><code id="outputs_dir_name">outputs_dir_name</code></td>
-<td>
-<p>The directory name for where artifacts will be saved.
-Default is <code>NULL</code>. If <code>NULL</code>, <code>OUTPUTS</code> will be used.</p>
+<p>The file path to the main project directory where the directory structure will be created. The directory must already exist; otherwise, an error will be thrown.</p>
 </td></tr>
 </table>
 
