--- a/public/html_files/finalize_document.html
+++ b/public/html_files/finalize_document.html
@@ -26,7 +26,7 @@ function processMathHTML() {
 
 <h3>Usage</h3>
 
-<pre><code class='language-R'>finalize_document(docx_in, docx_out = NULL, config_yaml = NULL)
+<pre><code class='language-R'>finalize_document(docx_in, docx_out = NULL)
 </code></pre>
 
 
@@ -40,10 +40,6 @@ function processMathHTML() {
 <tr><td><code id="docx_out">docx_out</code></td>
 <td>
 <p>The file path to the output <code>.docx</code> file to save to. Default is <code>NULL</code>. If <code>NULL</code>, <code>docx_out</code> is assigned <code>doc_dirs$doc_final</code> using <code>make_doc_dirs(docx_in = docx_in)</code>.</p>
-</td></tr>
-<tr><td><code id="config_yaml">config_yaml</code></td>
-<td>
-<p>The file path to the <code>config.yaml</code>. Default is <code>NULL</code>, a default <code>config.yaml</code> bundled with the <code>reportifyr</code> package is used.</p>
 </td></tr>
 </table>
 
